<resources>
    <string name="app_name">Book Zone</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>
    <string name="email_verified">Email Verified :</string>
    <string name="user_email">User Email :</string>
    <string name="picture">profile picture</string>
    <string name="school">School</string>
    <string name="profileNav">My Profile</string>
    <string name="homeNav">Home</string>

    <string name="usersNav">Users</string>

    <string name="messagesNav">Messages</string>
    <string name="profilePicture">Change Profile Picture</string>
    <string name="logout_title">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_title_hint">Enter a title for the Book.</string>
    <string name="book_title_label">Title</string>

    <string name="book_details_label">Details</string>
    <string name="book_details_hint">Enter details for the Book.</string>

    <string name="book_author_label">Author</string>
    <string name="book_author_hint">Enter the author for the Book.</string>

    <string name="book_price_label">Price</string>
    <string name="book_price_hint">Enter the price you want for the Book.</string>

    <string name="book_ISBN_label">ISBN</string>
    <string name="book_ISBN_hint">Enter the ISBN for the Book.</string>

    <string name="book_condition_label">New book</string>

    <string name="submit_button">Submit book to Bookz</string>

    <string name="new_post">New Post</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
</resources>