<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title_label"/>

    <EditText
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_author_label"/>

    <EditText
        android:id="@+id/book_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_author_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_price_label"/>

    <EditText
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_price_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_ISBN_label"/>

    <EditText
        android:id="@+id/book_ISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_ISBN_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label"/>

    <EditText
        android:id="@+id/book_detiails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_details_hint"/>

    <CheckBox
        android:id="@+id/book_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_condition_label"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/submit_button"/>

</LinearLayout>
