<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/book_detail_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title_label"/>

    <TextView
        android:id="@+id/book_detail_author"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_author_label"/>

    <TextView
        android:id="@+id/book_detail_price"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_price_label"/>

    <TextView
        android:id="@+id/book_detail_ISBN"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_ISBN_label"/>

    <TextView
        android:id="@+id/book_detail_details"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label"/>

    <CheckBox
        android:id="@+id/book_detail_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_condition_label"/>

    <Button
        android:id="@+id/contact_buyer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/submit_button"/>

</LinearLayout>